--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cypress": "cypress open -P ."
   },
   "browserslist": {
     "production": [
@@ -43,7 +44,7 @@
     "babel-loader": "^8.0.5",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.9.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
